--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ionic/angular": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.4",
@@ -36,6 +37,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "@ionic/angular-toolkit": "latest"
   }
 }
