--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@lemoncloud/lemon-front-lib": "1.3.5",
+    "aws-sdk": "2.585.0",
+    "axios": "0.19.0",
     "bootstrap": "^4.5.3",
+    "crypto-js": "3.1.9-1",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.4",
+    "whatwg-fetch": "3.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
