Work on drag and drop images and post product API

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.3",
     "crypto-js": "3.1.9-1",
     "jquery": "^3.6.0",
+    "ng2-dragula": "^2.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "util": "^0.12.4",
