--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@lemoncloud/lemon-front-lib": "1.3.5",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "aws-sdk": "2.585.0",
     "axios": "0.19.0",
     "bootstrap": "^4.5.3",
     "crypto-js": "3.1.9-1",
     "jquery": "^3.6.0",
     "ng2-dragula": "^2.1.1",
+    "ngx-translate-multi-http-loader": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "util": "^0.12.4",
