--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "3.1.9-1",
     "jquery": "^3.6.0",
     "ng2-dragula": "^2.1.1",
+    "ngx-barcode": "^0.3.0",
     "ngx-translate-multi-http-loader": "^8.0.1",
     "rxjs": "~7.5.0",
     "swiper": "^8.2.4",
